# livekit-plugins-chinese

./: README.md  build.py  publish.py  pyproject.toml
.cursor/: readme.mdc
benchmark/: README.md  test_latency.py
livekit-plugins/livekit-plugins-aliyun/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-aliyun/livekit/plugins/aliyun/: llm.py  stt.py  tts.py  utils.py
livekit-plugins/livekit-plugins-baidu/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-baidu/livekit/plugins/baidu/: stt.py  version.py
livekit-plugins/livekit-plugins-dify/: pyproject.toml
livekit-plugins/livekit-plugins-dify/livekit/plugins/dify/: llm.py
livekit-plugins/livekit-plugins-flashtts/: pyproject.toml
livekit-plugins/livekit-plugins-flashtts/livekit/plugins/flashtts/: tts.py
livekit-plugins/livekit-plugins-minimax/: pyproject.toml
livekit-plugins/livekit-plugins-minimax/livekit/plugins/minimax/: llm.py  tts.py
livekit-plugins/livekit-plugins-stepfun/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-stepfun/livekit/plugins/stepfun/: realtime.py
livekit-plugins/livekit-plugins-tencent/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-tencent/livekit/plugins/tencent/: stt.py
livekit-plugins/livekit-plugins-tencent/livekit/plugins/tencent/asr/: __init__.py
livekit-plugins/livekit-plugins-volcengine/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-volcengine/livekit/plugins/volcengine/: __init__.py  bigmodel_stt.py  llm.py  realtime.py  stt.py  tts.py  utils.py  version.py
livekit-plugins/livekit-plugins-xunfei/: pyproject.toml
livekit-plugins/livekit-plugins-zhipu/: pyproject.toml
livekit-plugins/livekit-plugins-zhipu/livekit/plugins/zhipu/: llm.py
livekit/plugins/volcengine/: stt.py  tts.py
src/livekit_plugins_volcengine/: __init__.py
tests/: test_volcengine_bigmodel_stt.py  test_volcengine_tts.py
