[project]
name = "livekit-plugins-volcengine"
version = "0.1.0"
description = "LiveKit Volcengine Plugins"
readme = "README.md"
authors = [
    { name = "wangmengdi", email = "790990241@qq.com" }
]
requires-python = ">=3.9"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
