[project]
name = "livekit-plugins-chinese"
version = "0.1.0"
requires-python = ">=3.10"

[tool.uv.sources]
livekit-plugins-volcengine = { workspace = true }
livekit-plugins-xunfei = { workspace = true }
livekit-plugins-baidu = { workspace = true }
livekit-plugins-tencent = { workspace = true}
livekit-plugins-minimax = { workspace = true}
livekit-plugins-zhipu = { workspace = true}
livekit-plugins-dify = { workspace = true}
livekit-plugins-flashtts = { workspace = true}
livekit-plugins-aliyun = { workspace = true}

[tool.uv.workspace]
members = ["livekit-plugins/*"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "mypy",
    "pytest",
    "ruff",
    "pytest-asyncio>=0.25.3",
    "jiwer>=3.1.0",
    "ipykernel>=6.29.5",
    "livekit-plugins-silero>=1.0.17",
    "websockets>=15.0.1",
    "jsonargparse",
    "pyaudio>=0.2.14",
    "srsly>=2.5.1",
    "loguru>=0.7.3",
    "polars>=1.33.0",
    "livekit-plugins-wuba>=1.2.3",
    "xlsxwriter>=3.2.5",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

